--- a/cw1/style.css
+++ b/cw1/style.css
@@ -1,22 +1,26 @@
 body{
   background-color: antiquewhite;
 }
-main {
-  display: flex;
+
+main{
+  display:flex;
   align-items: center;
 }
-content {
-  flex:1;
-  display: flex;
-  justify-content: center;
+
+.content{
+  flex:1; /* pozwól wyświetlić się elementowi na pełną szerokość */
+  display:flex;
+  justify-content: center; /* wycentruj zjęcie horyzontalnie */
 }
+
 .leftArr,
-.rightArr{
-  padding: 1rem;
+.rightArr{  
+  padding:1rem;
   cursor: pointer;
-  background-color: white;
+  border-radius: 50%;
+  background-color: #fff;
 }
-.footer{
+footer{
   text-align: right;
-  margin-top: 4rem;
+  margin-top:4rem;
 }
